--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AndriiKuz/form.git"
+    "url": "git+https://github.com/toni-wheel/youtube-base-project.git/"
   },
   "author": "",
   "license": "ISC",
